[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/TestEnemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/thief.png" type="Texture" id=2]
[ext_resource path="res://ai/GruntAI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/traits/AttackTrait.gd" type="Script" id=4]
[ext_resource path="res://scripts/traits/GravityEffect.gd" type="Script" id=5]
[ext_resource path="res://scripts/CollisionArea.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 20 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 4, 7, 32, 44 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AttackTrait")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.3, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_attack"
}, {
"args": [ false ],
"method": "set_attack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:transform/pos")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4, 0.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( -16, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackCollision:transform/pos")
tracks/3/interp = 2
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.4, 0.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ), Vector2( 5, 0 ), Vector2( 32, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AttackCollision")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.3, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate"
}, {
"args": [  ],
"method": "activate"
}, {
"args": [  ],
"method": "deactivate"
} ]
}

[sub_resource type="Animation" id=3]

resource/name = "defense"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 7, 351, 41, 39 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 4, 7, 32, 44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyCollision:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}

[sub_resource type="Animation" id=5]

resource/name = "stagger"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 0 ),
"update": 1,
"values": [ Rect2( 9, 462, 40, 50 ) ]
}

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 100.0

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 10.0

[node name="Grunt" type="KinematicBody2D"]

transform/pos = Vector2( 0, -22 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -1, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
HP = 3
MAX_ATTACK_RANGE = 50
WALK_SPEED = 2

[node name="sprite" type="Sprite" parent="."]

transform/pos = Vector2( -3, 0 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 4, 7, 32, 44 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/attack = SubResource( 2 )
anims/defense = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/stagger = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="BodyCollision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -1, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sight" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="sight"]

shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="GruntAI" parent="." instance=ExtResource( 3 )]

[node name="AttackTrait" type="Node" parent="."]

script/script = ExtResource( 4 )
anim_path = NodePath("../anim")
animation_name = "attack"
anim_speed = 1.6
attack_cooldown = 0.7

[node name="GravityEffect" type="Node" parent="."]

script/script = ExtResource( 5 )
disable = false
GRAVITY = 400.0

[node name="AttackCollision" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 8.58594, 0 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -34, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 6 )

[node name="shape" type="CollisionShape2D" parent="AttackCollision"]

transform/pos = Vector2( -34, 0 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="StaggerTime" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter" from="sight" to="." method="_on_sight_body_enter"]

[connection signal="body_exit" from="sight" to="." method="_on_sight_body_exit"]

[connection signal="body_enter" from="AttackCollision" to="." method="_on_AttackCollision_body_enter"]


